--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,9 @@
+build==1.2.1
+certifi==2024.7.4
+charset-normalizer==3.3.2
+idna==3.7
+packaging==24.1
+pyproject_hooks==1.1.0
 requests==2.31.0
+tomli==2.0.1
+urllib3==2.2.2
