--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,35 @@
+aiohappyeyeballs==2.3.5
+aiohttp==3.10.3
+aiosignal==1.3.1
+asyncio==3.4.3
+attrs==24.2.0
 build==1.2.1
 certifi==2024.7.4
 charset-normalizer==3.3.2
+colorama==0.4.6
+docutils==0.21.2
+frozenlist==1.4.1
 idna==3.7
+importlib_metadata==8.2.0
+jaraco.classes==3.4.0
+jaraco.context==5.3.0
+jaraco.functools==4.0.2
+keyring==25.3.0
+markdown-it-py==3.0.0
+mdurl==0.1.2
+more-itertools==10.4.0
+multidict==6.0.5
+nh3==0.2.18
 packaging==24.1
+pkginfo==1.10.0
+Pygments==2.18.0
 pyproject_hooks==1.1.0
-requests==2.31.0
-tomli==2.0.1
+pywin32-ctypes==0.2.2
+readme_renderer==44.0
+requests-toolbelt==1.0.0
+rfc3986==2.0.0
+rich==13.7.1
+twine==5.1.1
 urllib3==2.2.2
+yarl==1.9.4
+zipp==3.20.0
